update file index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Jose Perez</p> -->
         
         <table border="1">
-            <caption>clasificacion futbol</caption>
+            <caption>clasificatorias de mundial 2023</caption>
             <thead>
                 <tr>
                     <th>equipo</th>
@@ -30,25 +30,33 @@
                     <td>francia</td>
                     <td>12</td>
                     <td>6</td>
-                    <td></td>
+                    <td>
+                        <img src="img/fra.png" alt="escudo de francia" width="100px" height="100px">
+                    </td>
                 </tr>
                 <tr>
                     <td>colombia</td>
                     <td>16</td>
                     <td>6</td>
-                    <td></td>
+                    <td>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="escudo de colombia" width="100px" height="100px">
+                    </td>
                 </tr>
                 <tr>
-                    <td>zimbawe</td>
+                    <td>zimbabwe</td>
                     <td>8</td>
                     <td>6</td>
-                    <td></td>
+                    <td>
+                        <img src="img/zimbabwe.png" alt="escudo de francia" width="100px" height="100px">
+                    </td>
                 </tr>
                 <tr>
                     <td>china</td>
                     <td>6</td>
                     <td>2</td>
-                    <td></td>
+                    <td>
+                        <img src="img/China.png" alt="escudo de francia" width="100px" height="100px">
+                    </td>
                 </tr>
             </tbody>
             <tfoot>
