--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <ul>
-        <li><a hred="html/tablas.html">IR A TABLAS</a></li>
+        <li><a href="html/tablas.html">IR A TABLAS</a></li>
+        <li><a href="html/estilo.html">IR A estilo</a></li>
     </ul>
 </body>
 </html>
