--- a/html/estilo.html
+++ b/html/estilo.html
@@ -34,9 +34,9 @@
 
 <h2>selector decendente</h2>
 <div id="papa">
-    <div class="hermanos"></div>
+    <div class="hermanos"> 
         <span id="nh_uno" class="nieto hijo">span uno</span><br>
-        <span id="nh_dos" class="nieto hijo">span dos</span>
+        <span id="nh_dos" class="nieto hijo">span dos</span></div>
     <div class="hermanos">
         <span id="texto" class="nieto hijo">span tres</span>
     </div>
