unir taller con echo en clase

--- a/html/tablas.html
+++ b/html/tablas.html
@@ -3,60 +3,56 @@
         <meta charset="utf-8"> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-widith, initial-scale=1.0">
-        <title>clase lunes</title>   
+        <title>taller</title>   
     </head>
     <body>       
-        <table border="1">
-            <caption>clasificatorias de mundial 2023</caption>
+        <table border="3px">
+            <caption>tabla de autos deportivos</caption>
             <thead>
                 <tr>
-                    <th>equipo</th>
-                    <th>puntos</th>
-                    <th>partidos</th>
-                    <th>escudo</th>
+                    <th>marca</th>
+                    <th>modelo</th>
+                    <th>vehiculo</th>
+                    <th>valor</th>
+                    <th>importable</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>francia</td>
-                    <td>12</td>
-                    <td>6</td>
-                    <td>
-                        <img src="img/fra.png" alt="escudo de francia" width="100px" height="100px">
-                    </td>
+                    <td><img src="/multimedia/img/mclaren.png" alt="logo mclaren" width="100px" height="100px"></td>
+                    <td>Mclaren P1</td>
+                    <td><img src="/multimedia/img/mclarenp1.jpg" alt="mclaren P1" width="100px" height="100px"></td>
+                    <td>$ 300,000.00</td>
+                    <td rowspan="4"> si</td>
                 </tr>
                 <tr>
-                    <td>colombia</td>
-                    <td>16</td>
-                    <td>6</td>
-                    <td>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/Escudo_de_la_Federaci%C3%B3n_Colombiana_de_F%C3%BAtbol.png" alt="escudo de colombia" width="100px" height="100px">
-                    </td>
+                    <td><img src="/multimedia/img/logokoenigsegg.png" alt="logo koenigsegg" width="100px" height="100px"></td>
+                    <td>koenigsegg jesko absolut</td>
+                    <td><img src="/multimedia/img/koenigseggjeskoabsolut.jpg" alt="koenigsegg jesko absolut" width="100px" height="100px"></td>
+                    <td>$ 2,800,000.00</td>
                 </tr>
                 <tr>
-                    <td>zimbabwe</td>
-                    <td>8</td>
-                    <td>6</td>
-                    <td>
-                        <img src="img/zimbabwe.png" alt="escudo de francia" width="100px" height="100px">
-                    </td>
+                    <td><img src="/multimedia/img/PorscheLogo.png" alt="logo porsche" width="100px" height="100px"></td>
+                    <td>porsche 718 cayman gt4</td>
+                    <td><img src="/multimedia/img/porsche718caymangt4.jpg" alt="" width="100px" height="100px"></td>
+                    <td>$ 170,000.00</td>
                 </tr>
                 <tr>
-                    <td>china</td>
-                    <td>6</td>
-                    <td>2</td>
-                    <td>
-                        <img src="img/China.png" alt="escudo de francia" width="100px" height="100px">
-                    </td>
+                    <td><img src="/multimedia/img/logoLamborghini.png" alt="logo lamborghini" width="100px" height="100px"></td>
+                    <td>lamborghini aventador svj 63 roadster</td>
+                    <td><img src="/multimedia/img/lamborghiniaventadorsvj63roadster.jpg" alt="" width="100px" height="100px"></td>
+                    <td>$ 770,000.00</td>
+                </tr>
+                <tr>
+                   <td colspan="5">mas informacion al 080000000</td>
                 </tr>
             </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="4">tabla de posiciones</td>
-                </tr>
-            </tfoot>
         </table>
+        <ul>
+            <li>
+                <a href="/index.html">ir al menu principal</a>
+            </li>
+        </ul>
     </body>
-    
     
     </html>
