--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <ul>
         <li><a href="html/tablas.html">IR A TABLAS</a></li>
         <li><a href="html/estilo.html">IR A estilo</a></li>
+        <li><a href="html/Formularios.html">Formularios</a></li>
+        <li><a href="html/Texto.html">Textos</a></li>
+        <li><a href="html/Semantica.html">Semántica</a></li>
+        <li><a href="html/Agrupacion.html">Agrupación</a></li>
+        <li><a href="html/Multimedia.html">Multimedia</a></li>
     </ul>
 </body>
 </html>
