aprendiendo media query

--- a/html/estilo.html
+++ b/html/estilo.html
@@ -30,8 +30,6 @@
 <input type="text" name="" id="" disabled><br>
 <button id="btn_send">enviar</button>
 
-
-
 <h2>selector decendente</h2>
 <div id="papa">
     <div class="hermanos"> 
@@ -43,6 +41,10 @@
 </div>
 <br><br><br>
 
+<h2 id="title_box">box model</h2>
+<div id="box_father">
+    <div id="box_model"></div>
+</div>
 
 <a href="../index.html"><h2>IR A TABLAS</h2></a>
 </body>
