--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="html/Semantica.html">Semántica</a></li>
         <li><a href="html/Agrupacion.html">Agrupación</a></li>
         <li><a href="html/Multimedia.html">Multimedia</a></li>
+        <li><a href="html/flexbox.html">Multimedia</a></li>
     </ul>
 </body>
 </html>
